exercises/macros/tests/invalid/leading-comma.stderr
error: no rules expected the token `,`
 --> $DIR/leading-comma.rs:5:14
  |
5 |     hashmap!(, 'a' => 2);
  |              ^ no rules expected this token in macro call
